deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siri
spec:
  replicas: 1   # Adjust as needed
  selector:
    matchLabels:
      app: siri
  template:
    metadata:
      labels:
        app: siri
    spec:
      containers:
      - name: siri
        image: helenchuk2/k8s-repo:v3   # Replace with your Docker image
        ports:
        - containerPort: 80    # Port your application listens on
---
apiVersion: v1
kind: Service
metadata:
  name: siri
spec:
  selector:
    app: siri
  ports:
    - protocol: TCP
      port: 80     # Port exposed by the service
      targetPort: 80   # Port on the container
